# drone-simulator

./: CMakeLists.txt  README.md  conanfile.txt
libs/RungeKutta/: rk2ndODE.hpp
src/: CMakeLists.txt  drone.cpp  drone.hpp  main.cpp  motor.hpp  rk4.hpp
tests/: CMakeLists.txt  test_runge_kutta.cpp
